# File-Management

./: .gitignore  CMakeLists.txt  README.md  f2.md  main.cpp
include/: FileHandler.h  FileMetadata.h  FileOperationResult.h  FileUtils.h
src/: FileHandler.cpp  FileMetadata.cpp  FileOperationResult.cpp  FileUtils.cpp  main.cpp
